# streamelements_integration

./: .gitignore  Dockerfile-Digest  Dockerfile-SE-API-Ingest  Dockerfile-SE-Ingest  Dockerfile-SE-Socket-Ingest  README.md  config.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
docker/digester/: .env  config.yaml  example_config.yaml  run.py
docker/mosquitto/: mosquitto.conf  passwd
docker/streamelements/: run.py
docker/streamelements-api/: .env  run.py
docker/streamelements-socket/: .env
docs/: setup.drawio
src/event_worker/: __init__.py  _dispatcher.py  util.py
src/event_worker/streamelements/: __init__.py  api.py  apiclient.py  meta.py  parser.py  socketclient.py
src/event_worker/writer/: filewriter.py  models.py  mongowriter.py
