[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "event_worker"  # REQUIRED, is the only field that cannot be marked as dynamic.
version = "1.0.0"  # REQUIRED, although it can be dynamic
description = "A simple integration with the Streamelements API to get historic data"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["streaming", "twitch", "streamelements", "API"]
authors = [
  {name = "maralasar", email = "balasar@balasar.de" }
]
maintainers = [
  {name = "maralasar", email = "balasar@balasar.de" }
]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",
  # "Intended Audience :: Streamer",
  # "Intended Audience :: Developer",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "httpx",
  "pydantic",
  "paho-mqtt",
  "python-socketio[client]",
  "pyyaml",
  "pymongo"
]

[project.urls]
"Homepage" = "https://github.com/maralasar/streamelements_integration"
"Bug Reports" = "https://github.com/maralasar/streamelements_integration/issues"
"Source" = "https://github.com/maralasar/streamelements_integration/"


[tool.hatch.build.targets.sdist]
include = [
  "src/event_worker/",
]